--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -10,36 +10,10 @@
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/konu-anlatim.css">
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
-<body class="bg-gradient-to-br from-slate-50 to-slate-100 text-slate-800 leading-relaxed">
+<body data-needs-template="page" class="bg-gradient-to-br from-slate-50 to-slate-100 text-slate-800 leading-relaxed">
     <main class="container page-content">
         <div class="card p-8 md:p-12 max-w-6xl mx-auto">
-            <!-- Ana Başlık -->
-            <div class="text-center mb-12 pb-8 border-b border-slate-200">
-                <h1 class="text-5xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-cyan-500">
-                    T.C. Anayasası
-                </h1>
-                <p class="text-xl text-slate-600 mt-4 max-w-3xl mx-auto">
-                    Görevde Yükselme Sınavı (GYS) İçin <span class="font-semibold text-teal-700">Sınav Odaklı, Modern ve Yüksek Okunabilirlikli</span> Konu Anlatımı
-                </p>
-            </div>
-
-            <!-- Test Merkezi -->
-            <div class="my-10 p-8 rounded-2xl bg-gradient-to-r from-teal-500 to-cyan-600 text-white shadow-xl transform hover:scale-105 transition-all duration-300">
-                <div class="flex flex-col md:flex-row items-center justify-between gap-6">
-                    <div class="flex items-center">
-                        <div class="flex-shrink-0 text-5xl mr-4">📚</div>
-                        <div>
-                            <h3 class="text-2xl font-bold">Anayasa Test Merkezi</h3>
-                            <p class="mt-1">Konu anlatımından önce veya sonra, özel testlerle bilgilerinizi pekiştirin.</p>
-                        </div>
-                    </div>
-                    <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" class="test-btn">
-                        Testlere Göz At
-                    </a>
-                </div>
-            </div>
-
-            <!-- Öğrenciye Mesaj -->
+            <!-- Öğrenciye Mesaj (İçerik Başlangıcı) -->
             <div class="ozet-kutusu mb-10">
                 <div class="flex items-start">
                     <div class="flex-shrink-0 pt-1">
@@ -62,7 +36,6 @@
                     <h2 id="genel-esaslar" class="section-title mt-16 mb-6">
                         BİRİNCİ KISIM: Genel Esaslar
                     </h2>
-
                     <section aria-labelledby="bolum1-4">
                         <h3 id="bolum1-4" class="subsection-title text-2xl font-bold mt-12 mb-4">
                             Devletin "Çekirdek Ailesi": Değiştirilemez Hükümler
