--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -11,9 +11,39 @@
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 <body data-needs-template="page" class="bg-gradient-to-br from-slate-50 to-slate-100 text-slate-800 leading-relaxed">
+    <!-- template-loader.js buraya .navbar'ı ekleyecek -->
+    <!-- Sizin içeriğiniz main içinde kalacak -->
     <main class="container page-content">
         <div class="card p-8 md:p-12 max-w-6xl mx-auto">
-            <!-- Öğrenciye Mesaj (İçerik Başlangıcı) -->
+            <!-- ✅ BU KISIMLAR KORUNUYOR: Silinmiyor -->
+
+            <!-- Ana Başlık -->
+            <div class="text-center mb-12 pb-8 border-b border-slate-200">
+                <h1 class="text-5xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-cyan-500">
+                    T.C. Anayasası
+                </h1>
+                <p class="text-xl text-slate-600 mt-4 max-w-3xl mx-auto">
+                    Görevde Yükselme Sınavı (GYS) İçin <span class="font-semibold text-teal-700">Sınav Odaklı, Modern ve Yüksek Okunabilirlikli</span> Konu Anlatımı
+                </p>
+            </div>
+
+            <!-- Test Merkezi -->
+            <div class="my-10 p-8 rounded-2xl bg-gradient-to-r from-teal-500 to-cyan-600 text-white shadow-xl transform hover:scale-105 transition-all duration-300">
+                <div class="flex flex-col md:flex-row items-center justify-between gap-6">
+                    <div class="flex items-center">
+                        <div class="flex-shrink-0 text-5xl mr-4">📚</div>
+                        <div>
+                            <h3 class="text-2xl font-bold">Anayasa Test Merkezi</h3>
+                            <p class="mt-1">Konu anlatımından önce veya sonra, özel testlerle bilgilerinizi pekiştirin.</p>
+                        </div>
+                    </div>
+                    <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/testler/anayasa/" class="test-btn">
+                        Testlere Göz At
+                    </a>
+                </div>
+            </div>
+
+            <!-- Öğrenciye Mesaj -->
             <div class="ozet-kutusu mb-10">
                 <div class="flex items-start">
                     <div class="flex-shrink-0 pt-1">
