--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -11,12 +11,8 @@
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 <body data-needs-template="page" class="bg-gradient-to-br from-slate-50 to-slate-100 text-slate-800 leading-relaxed">
-    <!-- template-loader.js buraya .navbar'ı ekleyecek -->
-    <!-- Sizin içeriğiniz main içinde kalacak -->
     <main class="container page-content">
         <div class="card p-8 md:p-12 max-w-6xl mx-auto">
-            <!-- ✅ BU KISIMLAR KORUNUYOR: Silinmiyor -->
-
             <!-- Ana Başlık -->
             <div class="text-center mb-12 pb-8 border-b border-slate-200">
                 <h1 class="text-5xl md:text-6xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-600 to-cyan-500">
@@ -66,6 +62,7 @@
                     <h2 id="genel-esaslar" class="section-title mt-16 mb-6">
                         BİRİNCİ KISIM: Genel Esaslar
                     </h2>
+
                     <section aria-labelledby="bolum1-4">
                         <h3 id="bolum1-4" class="subsection-title text-2xl font-bold mt-12 mb-4">
                             Devletin "Çekirdek Ailesi": Değiştirilemez Hükümler
@@ -205,27 +202,62 @@
                             </div>
                         </details>
 
-                        <!-- Kavram Haritası: Kuvvetler Ayrılığı -->
-                        <div class="my-8">
-                            <h4 class="text-center font-bold text-xl mb-4 text-slate-700">📊 Kavram Haritası: Kuvvetler Ayrılığı İlkesi</h4>
-                            <div class="flex flex-col md:flex-row gap-4 text-center">
-                                <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-sm">
-                                    <h5 class="font-bold text-blue-800">YASAMA</h5>
-                                    <hr class="my-2 border-slate-200">
-                                    <blockquote class="text-sm text-slate-700" style="text-align: justify;">Yasama yetkisi Türk Milleti adına <strong>Türkiye Büyük Millet Meclisinindir</strong>. Bu yetki <strong>devredilemez</strong>.</blockquote>
-                                </div>
-                                <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-sm">
-                                    <h5 class="font-bold text-red-800">YÜRÜTME</h5>
-                                    <hr class="my-2 border-slate-200">
-                                    <blockquote class="text-sm text-slate-700" style="text-align: justify;">Yürütme yetkisi ve görevi, <strong>Cumhurbaşkanı tarafından</strong>, Anayasaya ve kanunlara uygun olarak kullanılır ve yerine getirilir.</blockquote>
-                                </div>
-                                <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-sm">
-                                    <h5 class="font-bold text-green-800">YARGI</h5>
-                                    <hr class="my-2 border-slate-200">
-                                    <blockquote class="text-sm text-slate-700" style="text-align: justify;">Yargı yetkisi, Türk Milleti adına <strong>bağımsız ve tarafsız mahkemelerce</strong> kullanılır.</blockquote>
+                        <!-- Madde 7 -->
+                        <details id="madde-7" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+                            <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 details-summary">
+                                <span class="mr-3 text-xl">📘</span> Madde 7 – Yasama, Yürütme, Yargı Yetkisinin Kullanımı
+                            </summary>
+                            <div class="px-4 pb-4 mt-2 border-t pt-4">
+                                <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                                    Yasama yetkisi, <strong>TBMM</strong> tarafından, yürütme yetkisi ve görevi <strong>Cumhurbaşkanı</strong> tarafından, yargı yetkisi <strong>bağımsız ve tarafsız mahkemeler</strong>ce kullanılır.
+                                </blockquote>
+                                <div class="highlight-box mt-4">
+                                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, <strong>kuvvetler ayrılığı ilkesinin</strong> doğrudan bir ifadesidir. Üç temel devlet organının hangi kurum tarafından temsil edildiğini ve yetkilerinin nasıl kullanılacağını net şekilde belirler:</p>
+                                    <ul class="list-none space-y-2 mt-2">
+                                        <li class="flex items-start"><span class="mr-2">🏛️</span><div><strong>Yasama:</strong> Türkiye Büyük Millet Meclisi (TBMM)</div></li>
+                                        <li class="flex items-start"><span class="mr-2">⚙️</span><div><strong>Yürütme:</strong> Cumhurbaşkanı</div></li>
+                                        <li class="flex items-start"><span class="mr-2">⚖️</span><div><strong>Yargı:</strong> Bağımsız ve tarafsız mahkemeler</div></li>
+                                    </ul>
+                                    <p class="mt-2" style="text-align: justify;">Sınavda bu madde genellikle "Aşağıdakilerden hangisi yürütme yetkisini kullanır?" gibi sorularla gelir.</p>
                                 </div>
                             </div>
-                        </div>
+                        </details>
+
+                        <!-- Madde 8 -->
+                        <details id="madde-8" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+                            <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 details-summary">
+                                <span class="mr-3 text-xl">📘</span> Madde 8 – Yasama Yetkisinin Kullanımı
+                            </summary>
+                            <div class="px-4 pb-4 mt-2 border-t pt-4">
+                                <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                                    Yasama yetkisi, <strong>TBMM</strong> tarafından, Anayasa’ya ve kanunlara uygun olarak kullanılır. Bu yetki <strong>devredilemez</strong>.
+                                </blockquote>
+                                <div class="strategy-box mt-4">
+                                    <p style="text-align: justify;"><strong>❗ Sınav Stratejisi:</strong> "Devredilemez" ifadesi bu maddenin en kritik kısmıdır. TBMM, yasama yetkisini başka bir kuruma veya kişiye devredemez. Bu, meclisin <strong>bağımsız ve temsilci</strong> yapısının bir gereğidir.</p>
+                                </div>
+                                <div class="warning-box mt-4">
+                                    <p style="text-align: justify;"><strong>💡 Anlamlandırma:</strong> "Devredilemez" olmak, yasama yetkisinin <strong>sadece TBMM</strong> tarafından kullanılabileceği anlamına gelir. Halk, bu yetkiyi doğrudan kullanamaz (referandum hariç), ancak temsilcileri aracılığıyla kullanır.</p>
+                                </div>
+                            </div>
+                        </details>
+
+                        <!-- Madde 9 -->
+                        <details id="madde-9" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+                            <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800 details-summary">
+                                <span class="mr-3 text-xl">📘</span> Madde 9 – Yürütme Yetkisinin Kullanımı
+                            </summary>
+                            <div class="px-4 pb-4 mt-2 border-t pt-4">
+                                <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                                    Yürütme yetkisi ve görevi, <strong>Cumhurbaşkanı</strong> tarafından, Anayasa’ya ve kanunlara uygun olarak kullanılır ve yerine getirilir.
+                                </blockquote>
+                                <div class="highlight-box mt-4">
+                                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, yürütme yetkisinin artık <strong>Başbakan değil, Cumhurbaşkanı</strong> tarafından kullanıldığını gösterir. 2017 değişiklikleriyle birlikte yürütme yetkisi doğrudan Cumhurbaşkanlığına geçmiştir.</p>
+                                </div>
+                                <div class="strategy-box mt-4">
+                                    <p style="text-align: justify;"><strong>❗ Sınav Stratejisi:</strong> "Cumhurbaşkanının yürütme yetkisi vardır" ifadesi, eski sistemde (Başbakanlık sistemi) yanlış kabul edilebilir. Ancak 2017 sonrası bu ifade <strong>doğrudur</strong>. Sınavda bu fark çok önemlidir.</p>
+                                </div>
+                            </div>
+                        </details>
 
                         <!-- Madde 10 -->
                         <details id="madde-10" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -421,14 +453,6 @@
                             </div>
                         </details>
                     </div>
-                </section>
-
-                <!-- İKİNCİ KISIM: Temel Haklar -->
-                <section aria-labelledby="ikinci-kisim">
-                    <h2 id="ikinci-kisim" class="section-title mt-16 mb-6">
-                        İKİNCİ KISIM: Temel Haklar ve Ödevler
-                    </h2>
-                    <!-- Diğer maddeler aynı yapıda devam eder... -->
                 </section>
             </article>
         </div>
