--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -258,6 +258,27 @@
                                 </div>
                             </div>
                         </details>
+                                            <!-- Kavram Haritası: Kuvvetler Ayrılığı (Madde 7-8-9) -->
+                    <div class="my-8">
+                        <h4 class="text-center font-bold text-xl mb-4 text-slate-700">📊 Kavram Haritası: Kuvvetler Ayrılığı (Madde 7-8-9)</h4>
+                        <div class="flex flex-col md:flex-row gap-4 text-center">
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-sm">
+                                <h5 class="font-bold text-blue-800">YASAMA (Madde 7)</h5>
+                                <hr class="my-2 border-slate-200">
+                                <p class="text-sm" style="text-align: justify;">Yasama yetkisi Türk Milleti adına <strong>Türkiye Büyük Millet Meclisinindir</strong>. Bu yetki <strong>devredilemez</strong>.</p>
+                            </div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-sm">
+                                <h5 class="font-bold text-red-800">YÜRÜTME (Madde 8)</h5>
+                                <hr class="my-2 border-slate-200">
+                                <p class="text-sm" style="text-align: justify;">Yürütme yetkisi ve görevi, <strong>Cumhurbaşkanı tarafından</strong>, Anayasaya ve kanunlara uygun olarak kullanılır ve yerine getirilir.</p>
+                            </div>
+                            <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-sm">
+                                <h5 class="font-bold text-green-800">YARGI (Madde 9)</h5>
+                                <hr class="my-2 border-slate-200">
+                                <p class="text-sm" style="text-align: justify;">Yargı yetkisi, Türk Milleti adına <strong>bağımsız ve tarafsız mahkemelerce</strong> kullanılır.</p>
+                            </div>
+                        </div>
+                    </div>
 
                         <!-- Madde 10 -->
                         <details id="madde-10" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
