--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -609,6 +609,142 @@
         </div>
     </details>
 </section>
+                <section aria-labelledby="bolum-kisinin-haklari">
+    <h3 id="bolum-kisinin-haklari" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">
+        İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri
+    </h3>
+    <p class="text-slate-600 mb-6" style="text-align: justify;">
+        Bu bölüm, bireyin en temel fiziksel ve hukuki varlığını koruyan hakları içerir. "Yaşama Hakkı", "Zorla Çalıştırma Yasağı" ve "Kişi Hürriyeti" gibi kavramlar, hem doğrudan bilgi hem de yorum sorularında sıklıkla karşınıza çıkar. Özellikle <strong>istisnalar</strong> ve <strong>süreler</strong> çok dikkat edilmesi gereken alanlardır.
+    </p>
+
+    <!-- Madde 17 -->
+    <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 17 – Kişinin Dokunulmazlığı, Maddi ve Manevi Varlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, <strong>doğal yaşam hakkı</strong>na sahiptir. Bu hakkın kullanılması, ancak kanunla belirlenen hallerde ve şekilde kısıtlanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Kimseye <strong>işkence ve eziyet yapılamaz;</strong> kimse insan haysiyetiyle bağdaşmayan bir cezaya veya muameleye tabi tutulamaz.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Meşru müdafaa hali, yakalama ve tutuklama kararlarının yerine getirilmesi, bir tutuklu veya hükümlünün kaçmasının önlenmesi, bir ayaklanma veya isyanın bastırılması veya olağanüstü hallerde yetkili merciin verdiği emirlerin uygulanması sırasında silah kullanılmasına kanunun cevaz verdiği zorunlu durumlarda</strong> meydana gelen öldürme fiilleri, birinci fıkra hükmü dışındadır.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Yaşama Hakkının İstisnaları</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda "Aşağıdakilerden hangisi yaşama hakkının istisnalarından biri değildir?" sorusu sıkça gelir. Anayasa'ya göre bu istisnalar şunlardır:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li><strong>Meşru müdafaa</strong></li>
+                    <li><strong>Yakalama ve tutuklama kararlarını uygulama</strong></li>
+                    <li><strong>Bir hükümlü veya tutuklunun kaçmasını önleme</strong></li>
+                    <li><strong>Bir ayaklanma veya isyanı bastırma</strong></li>
+                    <li><strong>Olağanüstü hallerde verilen emirleri uygulama</strong></li>
+                </ul>
+                <p class="text-sm mt-2" style="text-align: justify;"><strong>❗ Dikkat:</strong> Bu fiillerin "kanunun cevaz verdiği zorunlu durumlarda" olması şarttır. Aksi halde haksız fiil olur.</p>
+            </div>
+            <div class="highlight-box mt-4">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> "Yaşama hakkı" doğrudan bir hakkın yanı sıra, "işkence yasağı" ve "insanlık dışı muamele" gibi negatif hakları da kapsar. Bu madde, <strong>insanın fiziksel bütünlüğünün</strong> devlet tarafından korunmasını garanti eder. Sınavda "işkence" ile "meşru müdafaa" arasındaki fark sorgulanabilir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 18 -->
+    <details id="madde-18" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 18 – Zorla Çalıştırma Yasağı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Hiç kimse zorla çalıştırılamaz. <strong>Angarya yasaktır.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu (Angarya Nedir?)</h6>
+                <p style="text-align: justify;" class="text-sm">Angarya, bir kişinin emeğinin karşılığı ödenmeksizin veya kendi rızası dışında, özellikle kamu gücü tarafından zorla çalıştırılmasıdır. Bu ilkel bir çalışma biçimi olup modern hukukta yasaklanmıştır.</p>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Zorla Çalıştırma Sayılmayan Haller</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Sınavlarda en çok bu istisnalar sorulur. Aşağıdakiler <strong>angarya veya zorla çalıştırma değildir</strong>:</p>
+                <ul class="list-disc pl-5 text-sm space-y-1">
+                    <li><strong>Hükümlü ve tutukluların (kanun çerçevesinde) çalıştırılması.</strong></li>
+                    <li><strong>Olağanüstü hallerde (deprem, sel, savaş vb.) istenen hizmetler.</strong></li>
+                    <li><strong>Vatandaşlık ödevi niteliğindeki çalışmalar.</strong></li>
+                </ul>
+                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Örnek:</strong> Askerlik, afet sırasında yardım etme, mahkumların çalıştırılması bu kapsamdadır.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 19 -->
+    <details id="madde-19" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 19 – Kişi Hürriyeti ve Güvenliği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                <strong>Kimsenin hürriyeti ve güvenliği, kanunla belirtilen haller ve usul dışında sınırlandırılamaz.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hürriyeti kısıtlayıcı her nevi tedbir, ancak suç işlenmesini önlemek veya bir suça karışan kimsenin yakalanmasını sağlamak maksadıyla ve suçun niteliğine göre, yalnız kanunla belirtilen sürelerle ve şartlarla uygulanabilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Yakalanan veya tutuklanan kişi, en geç kırksekiz saat içinde hâkimin huzuruna çıkarılır.</strong> Bu süre, olay yerinden en yakın mahkemeye getirilmesi için gereken zorunlu yol süresiyle uzatılır.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Toplu suçlara katılanlar hakkında, bu süre dört güne kadar uzatılabilir.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Hâkim, kişinin tutuklanmasına veya serbest bırakılmasına karar verir. Bu karar, derhal ve gecikmeksizin ilgiliye ve avukatına bildirilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                Mahkemelerce verilmiş hürriyeti kısıtlayıcı cezaların ve güvenlik tedbirlerinin yerine getirilmesi;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                bir mahkeme kararının veya kanunda öngörülen bir yükümlülüğün gereği olarak ilgilinin yakalanması veya tutuklanması;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                bir küçüğün gözetim altında ıslahı veya yetkili merci önüne çıkarılması için verilen bir kararın yerine getirilmesi;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                toplum için tehlike teşkil eden bir akıl hastası, uyuşturucu madde veya alkol tutkunu, bir serseri veya hastalık yayabilecek bir kişinin bir müessesede tedavi, eğitim veya ıslahı için kanunda belirtilen esaslara uygun olarak alınan tedbirin yerine getirilmesi;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                usulüne aykırı şekilde ülkeye girmek isteyen veya giren, ya da hakkında sınır dışı etme yahut geri verme kararı verilen bir kişinin yakalanması veya tutuklanması;
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                halleri dışında kimse hürriyetinden yoksun bırakılamaz.
+            </blockquote>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Gözaltı Süreleri</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu uzun maddedeki en net ve en çok sorulan bilgi, gözaltı süreleridir. Unutmayın:</p>
+                <ul class="list-none space-y-2">
+                    <li class="flex items-start">
+                        <span class="mr-3 mt-1 text-teal-700">👤</span>
+                        <div>
+                            <strong>Bireysel Suçlarda:</strong> En geç <strong>48 saat</strong> içinde hâkim önüne çıkarılmalıdır.
+                        </div>
+                    </li>
+                    <li class="flex items-start">
+                        <span class="mr-3 mt-1 text-red-700">👥</span>
+                        <div>
+                            <strong>Toplu Suçlarda:</strong> En çok <strong>4 gün</strong> içinde hâkim önüne çıkarılmalıdır.
+                        </div>
+                    </li>
+                </ul>
+                <p class="text-sm mt-2" style="text-align: justify;"><strong>📌 Not:</strong> Bu sürelere, kişinin en yakın mahkemeye gönderilmesi için gereken <strong>"zorunlu yol süresi"</strong> dahil değildir. Yani, 48 saat + yol süresi.</p>
+            </div>
+            <div class="warning-box mt-4">
+                <p style="text-align: justify;"><strong>⚠️ Karıştırılmaması Gerekenler:</strong></p>
+                <ul class="list-disc pl-5 text-sm mt-2">
+                    <li><strong>48 saat</strong> → Yakalama sonrası hâkim önüne çıkarılma süresi.</li>
+                    <li><strong>24 saat</strong> → Adli kontrol tedbirlerinin uygulanması için savcının süresi (Ceza Muhakemesi Kanunu).</li>
+                    <li><strong>8 saat</strong> → Suçüstü yakalamada ifade alma süresi.</li>
+                </ul>
+            </div>
+        </div>
+    </details>
+</section>
                 
 
 
