--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -475,13 +475,25 @@
                         </details>
                     </div>
                 </section>
-                <section aria-labelledby="bolum-genel-hukumler">
-    <h3 id="bolum-genel-hukumler" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">
+                <!-- İKİNCİ KISIM: Temel Haklar ve Ödevler -->
+<h2 id="ikinci-kisim" class="section-title mt-16 mb-6">
+    İKİNCİ KISIM: Temel Haklar ve Ödevler
+</h2>
+
+<section aria-labelledby="bolum-genel-hukumler">
+    <h3 id="bolum-genel-hukumler" class="subsection-title text-2xl font-bold mt-12 mb-4">
         BİRİNCİ BÖLÜM: Genel Hükümler
     </h3>
     <p class="text-slate-600 mb-6" style="text-align: justify;">
         Bu bölüm, temel hak ve hürriyetlerin "kullanma kılavuzu" gibidir. Hakların niteliğini, hangi koşullarda sınırlanabileceğini, hangi olağanüstü durumlarda durdurulabileceğini ve bu durumlarda bile hangi "çekirdek haklara" asla dokunulamayacağını belirler. Sınavda yorum ve bilgi sorularının en sık geldiği alanlardan biridir.
     </p>
+
+    <!-- Madde 12 -->
+    <details id="madde-12" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 12 – Temel Hak ve Hürriyetlerin Niteliği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
 
     <!-- Madde 12 -->
     <details id="madde-12" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
@@ -609,13 +621,15 @@
         </div>
     </details>
 </section>
-                <section aria-labelledby="bolum-kisinin-haklari">
-    <h3 id="bolum-kisinin-haklari" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">
+                <!-- İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri -->
+<section aria-labelledby="bolum-kisinin-haklari">
+    <h3 id="bolum-kisinin-haklari" class="subsection-title text-2xl font-bold mt-12 mb-4">
         İKİNCİ BÖLÜM: Kişinin Hakları ve Ödevleri
     </h3>
     <p class="text-slate-600 mb-6" style="text-align: justify;">
-        Bu bölüm, bireyin en temel fiziksel ve hukuki varlığını koruyan hakları içerir. "Yaşama Hakkı", "Zorla Çalıştırma Yasağı" ve "Kişi Hürriyeti" gibi kavramlar, hem doğrudan bilgi hem de yorum sorularında sıklıkla karşınıza çıkar. Özellikle <strong>istisnalar</strong> ve <strong>süreler</strong> çok dikkat edilmesi gereken alanlardır.
+        Bu bölümde yer alan haklar, bireyi devlete ve topluma karşı koruyan, devletin müdahale edemeyeceği özel alanı çizen haklardır. "Koruyucu Haklar" olarak da bilinirler. Devletin bu haklara karşı temel görevi "gölge etmemek", yani dokunmamaktır.
     </p>
+
 
     <!-- Madde 17 -->
     <details id="madde-17" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
